se agrega NGMaterial y algunas rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <ion-app>
+  <div class={{divSuperpuesto}} [style.display]="splash ? 'flex' : 'none'">
+    <div class={{splashAnimation}}>
+
+    </div>
+  </div>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
