--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -230,3 +230,11 @@
     --ion-card-background: #1e1e1e;
   }
 }
+.nav-bar-image{
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
+}
+.app-nav-bar{
+  --border-style: "none";
+}
