--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <ion-app>
   <div class={{divSuperpuesto}} [style.display]="splash ? 'flex' : 'none'">
     <div class={{splashAnimation}}>
-
+      <img class="contorno" src="../assets/relevamiento-contorno.png" alt="contorno edificio">
+      <img class="ventanas" src="../assets/relevamiento-ventanas_1.png" alt="ventanas">
+      <img class="puerta" src="../assets/relevaminto-puerta.png" alt="puerta">
+      <img class="estrellas" src="../assets/relevamiento-estrellas.png" alt="estrellas">
     </div>
   </div>
   <ion-router-outlet></ion-router-outlet>
